--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -23,3 +23,17 @@ vscode:
   extensions:
     - 42Crunch.vscode-openapi
     - cweijan.vscode-postgresql-client2
+
+ports:
+  - name: frontend
+    port: 3000
+    onOpen: open-browser
+    visibility: public
+  - name: backend
+    port: 4567
+    onOpen: open-browser
+    visibility: public
+  - name: xray-daemon
+    port: 2000
+    onOpen: open-browser
+    visibility: public        
