--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,10 @@ services:
   frontend-react-js:
     environment:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
+      REACT_APP_AWS_PROJECT_REGION : "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_COGNITO_REGION : "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_USER_POOLS_ID : "us-east-1_cQjG6wR4C"
+      REACT_APP_CLIENT_ID : "30aa3e9qkt330c6sbkqobgu2gi"      
     build: ./frontend-react-js
     ports:
       - "3000:3000"
