--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -33,8 +33,8 @@ services:
       REACT_APP_BACKEND_URL: "http://localhost:4567"
       REACT_APP_AWS_PROJECT_REGION : "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION : "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID : "us-east-1_cQjG6wR4C"
-      REACT_APP_CLIENT_ID : "30aa3e9qkt330c6sbkqobgu2gi"      
+      REACT_APP_AWS_USER_POOLS_ID : "us-east-1_qKBKaXh7N"
+      REACT_APP_CLIENT_ID : "6rv7ri1lcd4oqlmapiks1ql8dd"      
     build: ./frontend-react-js
     ports:
       - "3000:3000"
