--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -2,6 +2,7 @@ version: "3.8"
 services:
   backend-flask:
     environment:
+      CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
       FRONTEND_URL: "http://localhost:3000"
       BACKEND_URL: "http://localhost:4567"
       OTEL_SERVICE_NAME: "backend-flask"
