--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   backend-flask:
     environment:
-      CONNECTION_URL: "${PROD_CONNECTION_URL}"
+      CONNECTION_URL: "${CONNECTION_URL}"
       FRONTEND_URL: "http://localhost:3000"
       BACKEND_URL: "http://localhost:4567"
       OTEL_SERVICE_NAME: "backend-flask"
@@ -44,18 +44,18 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend-react-js:/frontend-react-js
-  # dynamodb-local:
-    # # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
-    # # We needed to add user:root to get this working.
-    # user: root
-    # command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
-    # image: "amazon/dynamodb-local:latest"
-    # container_name: dynamodb-local
-    # ports:
-    #   - "8000:8000"
-    # volumes:
-    #   - "./docker/dynamodb:/home/dynamodblocal/data"
-    # working_dir: /home/dynamodblocal
+  dynamodb-local:
+    # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
+    # We needed to add user:root to get this working.
+    user: root
+    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+    image: "amazon/dynamodb-local:latest"
+    container_name: dynamodb-local
+    ports:
+      - "8000:8000"
+    volumes:
+      - "./docker/dynamodb:/home/dynamodblocal/data"
+    working_dir: /home/dynamodblocal
   db:
     image: postgres:13-alpine
     restart: always
