--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -2,8 +2,8 @@ version: "3.8"
 services:
   backend-flask:
     environment:
-      AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
-      CONNECTION_URL: "${CONNECTION_URL}"
+      # AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
+      CONNECTION_URL: "${PROD_CONNECTION_URL}"
       FRONTEND_URL: "http://localhost:3000"
       BACKEND_URL: "http://localhost:4567"
       OTEL_SERVICE_NAME: "backend-flask"
