--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -4,6 +4,7 @@ services:
     environment:
       # AWS_ENDPOINT_URL: "http://dynamodb-local:8000"
       CONNECTION_URL: "${PROD_CONNECTION_URL}"
+      # CONNECTION_URL: "postgresql://postgres:password@db:5432/cruddur"
       FRONTEND_URL: "http://localhost:3000"
       BACKEND_URL: "http://localhost:4567"
       OTEL_SERVICE_NAME: "backend-flask"
